# nomad-DAMASK_parser

./: .cruft.json  404.html  LICENSE  MANIFEST.in  README.md  README.md.rej  index.html  mkdocs.yml  move_template_files.sh  pyproject.toml  pyproject.toml.rej
.devcontainer/: devcontainer.json
.github/workflows/: actions.yml
docs/: index.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/damask_parser/actions/: __init__.py
src/damask_parser/actions/simple_action/: __init__.py  activities.py  models.py  workflows.py
src/damask_parser/example_uploads/: __init__.py
src/damask_parser/example_uploads/getting_started/: README.md
src/damask_parser/parsers/: __init__.py  parser.py  parser.py.rej
src/damask_parser/schema_packages/: __init__.py  schema_package.py  schema_package.py.rej
src/nomad_damask_parser/parsers/: __init__.py  myparser.py
src/nomad_damask_parser/schema_packages/: __init__.py  damask_schema.archive.yaml  mypackage.py
tests/actions/: test_action.py
tests/data/: test.archive.yaml  test.archive.yaml.rej
tests/parsers/: test_parser.py  test_parser.py.rej
tests/schema_packages/: test_schema.py  test_schema_package.py.rej
tutorial/: tutorial.html
